--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -68,28 +68,48 @@
     }
     .table-tag{
         span{
-            &.color1{
-                color: #94c2ff;
-            }
-            &.color2{
-                color: #ffa415;
-            }
-            &.color3{
-                color: #bdbdbd;
-            }
-            &.color4{
-                color: #94c2ff;
-            }
-            &.color5{
-                color: #61d071;
-            }
-            &.color6{
-                color: #ee3c40;
-            }
-            &.color7{
-                color: #94c2ff;
-            }
-
         }
+        .color1{
+            color: #94c2ff;
+        }
+        .color2{
+            color: #ffa415;
+        }
+        .color3{
+            color: #bdbdbd;
+        }
+        .color4{
+            color: #94c2ff;
+        }
+        .color5{
+            color: #61d071;
+        }
+        .color6{
+            color: #ee3c40;
+        }
+        .color7{
+            color: #94c2ff;
+        }
+        .el-button{
+            padding:0px;
+            border:0px;
+            white-space: normal;
+            cursor:default;
+            text-align: left;
+            background: none;
+            &:hover{
+                background: none;
+            }
+        }
+    }
+}
+.timenewline{
+    clear: both;
+    display: block;
+    line-height: 1.3;
+    span{
+        clear: both;
+        display: block;
+        color:#bbb;
     }
 }
