--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -687,97 +687,74 @@
     }
   }
 }
+
+.item-search{
+  &.EnphoneSearchOne{
+    .item{
+      clear: both;
+      padding-top: 5px;
+      strong{
+        font-size: 14px;
+        line-height: 24px;
+        margin-right: 10px;
+        margin-top: 4px;
+        margin-bottom: 4px;
+        vertical-align:top;
+        display: inline-block;
+        width: 72px;
+        text-align: right;
+      }
+      .all-select{
+        vertical-align: middle;
+        margin-top:4px;
+        margin-bottom:4px;            
+        .el-checkbox__input.is-indeterminate{
+          .el-checkbox__inner{
+            background-color:#2e84f6 !important;
+            border-color:#2e84f6 !important;
+          }
+        }   
+      }
+      .team-list{            
+        display: inline-block;
+        vertical-align: middle;
+        padding-left: 10px;
+        .el-checkbox{
+          margin-top:4px;
+          margin-bottom:4px;
+          margin-right: 10px;
+          margin-left: 0px;
+        }
+      }
+    }
+  }
+  &.EnphoneSearchTwo{
+    .team-list{     
+      margin:0;  
+      .item-clues{
+        float:none;
+        display: inline-block;
+      }
+    }
+    .search-panelThree{
+      padding-left:15px;
+      margin: 5px;
+      .el-radio{margin-right:0px;}
+    }
+    .el-checkbox.is-bordered.el-checkbox--mini{
+      margin:5px 5px 5px 0px;
+    }
+  }
+  &.EnphoneSearchThree{
+    .el-input--suffix .el-input__inner{padding:0px 10px;}
+    .el-checkbox{margin-right:10px;margin-left: 0px;}
+  }
+}
 .en-phone-search{
   .search-wrap{
     .item-search{
       width: 100%;
       padding: 4px 0;
-      &.EnphoneSearchOne{
-        .item{
-          clear: both;
-          padding-top: 5px;
-          strong{
-            font-size: 14px;
-            line-height: 24px;
-            margin-right: 10px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-            vertical-align:top;
-            display: inline-block;
-            width: 72px;
-            text-align: right;
-          }
-          .all-select{
-            vertical-align: middle;
-            margin-top:4px;
-            margin-bottom:4px;            
-            .el-checkbox__input.is-indeterminate{
-              .el-checkbox__inner{
-                background-color:#2e84f6 !important;
-                border-color:#2e84f6 !important;
-              }
-            }            
-            &.is-checked,&:hover,&:focus{
-                border-color:#2e84f6 !important;
-                .el-checkbox__label{
-                    color:#2e84f6;
-                }
-                .el-checkbox__input{
-                    .el-checkbox__inner{
-                        background-color:#2e84f6;
-                        border-color:#2e84f6;
-                        &::after{display: none;}
-                        &::before{
-                            box-sizing:content-box;
-                            content:"";
-                            background: none;
-                            border:1px solid #FFFFFF;
-                            border-left:0;
-                            border-top:0;
-                            height:7px;
-                            width:3px;
-                            left:3px;
-                            top:0px;
-                            transform:rotate(45deg) scaleY(1);
-                        }
-                    }
-                }
-            }
-          }
-          .team-list{            
-            display: inline-block;
-            vertical-align: middle;
-            padding-left: 10px;
-            .el-checkbox{
-              margin-top:4px;
-              margin-bottom:4px;
-              margin-right: 10px;
-              margin-left: 0px;
-            }
-          }
-        }
-      }
-      &.EnphoneSearchTwo{
-        .team-list{     
-          margin:0;  
-          .item-clues{
-            float:none;
-            display: inline-block;
-          }
-        }
-        .search-panelThree{
-          padding-left:15px;
-          margin: 5px;
-          .el-radio{margin-right:0px;}
-        }
-        .el-checkbox.is-bordered.el-checkbox--mini{
-          margin:5px 5px 5px 0px;
-        }
-      }
-      &.EnphoneSearchThree{
-        .el-input--suffix .el-input__inner{padding:0px 10px;}
-        .el-checkbox{margin-right:10px;margin-left: 0px;}
-      }
     }
   }
 }
