头像上传+英文询盘搜索条件

--- a/src/styles/-layout.scss
+++ b/src/styles/-layout.scss
@@ -78,6 +78,11 @@
                 background: #63666c;
                 vertical-align: middle;
                 color: #d8d8d8;
+                img{
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                }
             }
             .user-name{
                 display: inline-block;
