--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -170,6 +170,72 @@
                 .rowOneOneItemFl{
                     width:500px;
                     height:244px;
+                    position:relative;
+                    .legendFly{
+                        position: absolute;
+                        bottom: -6px;
+                        width: 100%;
+                        text-align: center;
+                        span{
+                            display: inline-block;
+                            margin-right: 20px;
+                            font-size: 12px;
+                            line-height: 14px;
+                            color: #666;
+                            padding-left: 20px;
+                            position: relative;
+                        }
+                        .legendItem1:before{
+                            content: "";
+                            display: block;
+                            width: 14px;
+                            height: 14px;
+                            background: #e7f1ff;
+                            position: absolute;
+                            left: 0;
+                            top: 0;
+                        }
+                        .legendItem2:before{
+                            content: "";
+                            display: block;
+                            width: 14px;
+                            height: 14px;
+                            background: #59cab6;
+                            position: absolute;
+                            left: 0;
+                            top: 0;
+                        }
+                        .legendItem3:before{
+                            content: "";
+                            display: block;
+                            width: 14px;
+                            height: 14px;
+                            background: #f38080;
+                            position: absolute;
+                            left: 0;
+                            top: 0;
+                        }
+                        .legendItem4:before{
+                            content: "";
+                            display: block;
+                            width: 14px;
+                            height: 2px;
+                            background: #f38080;
+                            position: absolute;
+                            left: 0;
+                            top: 6px;
+                        }
+                        .legendItem5:before{
+                            content: "";
+                            display: block;
+                            width: 14px;
+                            height: 2px;
+                            background: #fcb030;
+                            position: absolute;
+                            left: 0;
+                            top: 6px;
+                        }
+                    }
                 }
                 .rowOneOneItemFr{
                     background:#f3f8fe;
