--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -644,20 +644,6 @@
                             }
                         }
                     }
-                    &.enItemDl{
-                        text-align: center;
-                        dt{
-                            float: none;
-                            display: inline-block;
-                            padding-left: 0px;
-                            width: 100%;
-                            text-align: center;                            
-                            .rowTwoTwoItemDlTit{text-align: center;}                            
-                            .rowTwoTwoItemDlNum{text-align: center;
-                                span{}
-                            }
-                        }
-                    }
                 }
             }
         }
@@ -666,6 +652,7 @@
         background:#fff;
         border-radius:8px;
         padding:20px 30px 30px 30px;
+        margin-bottom:20px;
         .rowThreeOne{
             clear:both;
             width:100%;
@@ -1230,6 +1217,275 @@
                     }
                }
            }
+        }
+    }
+    .rowFive{
+        background:#fff;
+        border-radius:8px;
+        padding:20px 30px 30px 30px;
+        margin-bottom:20px;
+        .rowFiveFl{
+           .chart-canvas{
+             height: 281px;
+           }
+        }
+        .rowFiveFr{
+            width:465px;
+            margin-left: 40px;
+            h3{padding-left:35px;}
+            .rowFiveFrBox{
+                padding-left:30px;
+                border-left:1px dashed #c9c9c9;
+                height: 281px;
+                .rowFiveFrBoxFl{
+                    width:170px;
+                    margin-left:20px;
+                    padding-top:17px;
+                    li{
+                        clear: both;
+                        display: block;
+                        margin-bottom:40px;
+                        box-shadow:0px 0px 10px rgba(0,0,0,0.1);
+                        border-radius:8px;
+                        background:#fff;
+                        padding: 20px 30px;
+                        span{
+                            clear: both;
+                            display: block;
+                            font-size:14px;
+                            color:#666;
+                            line-height: 1;
+                            padding-bottom:10px;
+                        }
+                        strong{
+                            clear: both;
+                            display: block;
+                            color:#ff4246;
+                            line-height: 1;
+                            i{font-style: normal; display: inline-block; margin-right:5px;}
+                            &.falling{
+                                color:#59cab6;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .rowSix{
+        background:#fff;
+        border-radius:8px;
+        padding:20px 30px 30px 30px;
+        margin-bottom:20px;
+        .rowSixFl{
+           .chart-canvas{
+             height: 281px;
+           }
+        }
+        .rowSixFr{
+            width:465px;
+            margin-left: 40px;
+            h3{padding-left:35px;}
+            .rowSixFrBox{
+                border-left:1px dashed #c9c9c9;
+                height: 281px;
+                padding-left:40px;
+                .rowSixFrTop{
+                    li{
+                        padding-bottom:40px;
+                        .time{
+                            clear: both;
+                            display: block;
+                            font-size:14px;
+                            color:#999999;
+                            text-align: left;
+                            line-height:1;
+                            padding-bottom:8px;
+                        }
+                        .contrast{
+                            .percen{
+                                display:inline-block;
+                                background:none;
+                                i{
+                                    clear: both;
+                                    display: inline-block;
+                                    background:#fad9a3;
+                                    height:22px;
+                                    border-radius:11px;
+                                }
+                            }
+                            .number{
+                                color:#313131;
+                                padding-left: 10px;
+                            }
+                        }
+                        &:first-child{
+                            .contrast{
+                                .percen{
+                                    i{
+                                        background:#9bcdda;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                .rowSixFrBom{
+                    padding-top:27px;
+                    li{
+                        float: left;
+                        &>i{
+                            float: left;
+                            width: 40px;
+                            height: 40px;
+                            background: #ffe2cc;
+                            border-radius: 4px;
+                            margin-right:20px;
+                            text-align: center;
+                            line-height: 40px;
+                            font-size: 20px;
+                            color: #ff4246;
+                        }
+                        p{
+                            float: left;
+                            span{
+                                clear: both;
+                                display: block;
+                                font-size:14px;
+                                color:#666;
+                                line-height: 1;
+                                padding-bottom:10px;
+                            }
+                            strong{
+                                clear: both;
+                                display: block;
+                                color:#ff4246;
+                                line-height: 1;
+                                font-size:28px;
+                                i{
+                                    font-style: normal;
+                                    display: inline-block;
+                                    margin-left: 5px;
+                                    font-size: 14px;
+                                    vertical-align: middle;}
+                                &.falling{
+                                    color:#59cab6;
+                                }
+                            }
+                        }
+                        &:first-child{margin-right:40px;}
+                    }
+                }
+            }
+        }
+    }
+    .rowSever{
+        margin-bottom:20px;
+        .rowSeverFl{
+            float: left;
+            width: 31.3%;
+            background:#fff;
+            border-radius:8px;
+            padding:20px 30px 30px 30px;
+            display: block;
+            position: relative;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            h3{}
+            .unit{font-size:12px; color:#666666; line-height:1;}
+            .totalNum{
+                position: absolute;
+                left: 60px;
+                top: 110px;
+                padding-left: 20px;
+                &:before{
+                    content:'';
+                    position:absolute;
+                    left:0px;
+                    top:0px;
+                    bottom:0px;
+                    background:#ed7272;
+                    border-radius:3px;
+                    width:6px;
+                }
+                span{
+                    clear: both;
+                    display: block;
+                    font-size:14px;
+                    color:#1a1a1a;
+                    line-height:1;
+                    padding-bottom:15px;
+                }
+                strong{
+                    clear: both;
+                    display: block;
+                    font-size: 28px;
+                    color: #1a1a1a;
+                    line-height: 1;
+                    font-weight: normal;
+                }
+            }
+        }
+        .rowSeverFr{
+            float: right;
+            width: 67.3583%;        
+            background:#fff;
+            border-radius:8px;
+            padding:20px 30px 30px 30px;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            .rowSeverFrOne{
+                float: left;
+                width: 57.3%;
+                .rowSeverFrOnetit{
+                    padding-top: 10px;
+                    padding-bottom: 12px;
+                    h3{float: left;
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                        padding: 0px;}
+                    span{
+                        float: right;
+                        color: #c1c1c1;
+                        font-size: 12px;
+                        line-height: 30px;}
+                }
+                .rowSeverFrOneBox{
+                    .el-table.rowThreeTable{
+                        display:flex;
+                        flex-direction:column;
+                        border:1px solid #e5ecf2;
+                        border-bottom:0px;
+                        text-align:center;
+                        th.is-leaf{
+                            background:#f4f6f9;
+                            font-size:14px;
+                            color:#555;
+                            font-weight:normal;
+                            border-bottom:0px;
+                            border-right:0px;
+                            line-height:20px;
+                            padding:7px 0;
+                            border-bottom:0px;
+                        }
+                        &.el-table--medium .el-table__cell{padding:13px 0px;}
+                        th.gutter{background:#f4f6f9;}
+                        .el-table__body tr.el-table__row--striped td{background:#fff;}
+                        .rowThreeGrowth{
+                            clear:both;
+                            display:block;
+                        }
+                    }
+                }
+            }
+            .rowSeverFrTwo{
+                float: right;
+                width: 39.6%;
+                .unit{font-size:12px; color:#666666; line-height:1;padding-bottom:10px;}
+                .chart-canvas{
+                    height: 347px;
+                }
+            }
         }
     }
 }
