--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -209,7 +209,7 @@
             border-top: 12px solid #f16b6b;
         }
     }
-    &.target{    top: -35px;
+    &.target{   left: -90px;
         .txt-font{
             background-color: #6aa343;
         }
